--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
   <string name="sign_in_failure_message">Unable to sign in with provided credentials.</string>
   <string name="sign_out_title">Sign out</string>
   <string name="settings_title">Settings</string>
+  <string name="history_cutoff_key">history_cutoff</string>
+  <string name="history_cutoff_title">Requested message history (in hours).</string>
+  <string name="settings_fragment_label">Chat settings</string>
 </resources>
