Finished implementing round-trip, including created.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,11 @@
 <resources>
   <string name="login_fragment_label">Sign in to Chat</string>
-  <string name="main_fragment_label">@string/app_name</string>
+  <string name="main_fragment_label">Service Token</string>
   <string name="sign_in_failure_message">Unable to sign in with provided credentials.</string>
   <string name="sign_out_title">Sign out</string>
   <string name="settings_title">Settings</string>
   <string name="history_cutoff_key">history_cutoff</string>
   <string name="history_cutoff_title">Requested message history (in hours).</string>
   <string name="settings_fragment_label">Chat settings</string>
+  <string name="bearer_token_title">Bearer token</string>
 </resources>
